[term] avoid wrapping on fallbacked font

--- a/packages-custom/ayapi-term/styles/ayapi-term.less
+++ b/packages-custom/ayapi-term/styles/ayapi-term.less
@@ -11,4 +11,8 @@
   span {
     display: inline-block;
   }
+  
+  .terminal .xterm-rows div {
+    white-space: nowrap;
+  }
 }
